# fl-demonstrator

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE.md  README.md  REUSE.toml  dev  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml
.reuse/: dep5
LICENSES/: LicenseRef-Proprietary-DLR.txt
docker/: .env
docker/celery/: Dockerfile  docker-start.sh
docker/django/: Dockerfile  docker-start.sh
docs/: Fl Platform.postman_collection.json  index.md
docs/assets/: Fl Platform.postman_collection.json  Fl Platform.postman_collection.json.license
docs/javascripts/: katex.js
docs/styles/: style.css
docs/web-service/: model-enums.puml  models.puml  training-process.puml
fl_server/: __init__.py  asgi.py  urls.py  wsgi.py
fl_server/settings/: base.py  development.py  production.py
fl_server_ai/: __init__.py  apps.py  celery_tasks.py  exceptions.py
fl_server_ai/aggregation/: __init__.py  base.py  fed_dc.py  fed_prox.py  mean.py  method.py
fl_server_ai/notification/: __init__.py  notification.py  notification_type.py  serializable.py
fl_server_ai/notification/training/: __init__.py  finished.py  model_test.py  round_start.py  start.py  swag.py  training.py
fl_server_ai/tests/: __init__.py  test_aggregation.py  test_aggregation_process.py  test_ai_worker.py  test_feddc.py  test_notification.py  test_uncertainty_ensemble.py  test_uncertainty_mc.py  test_uncertainty_swag.py
fl_server_ai/trainer/: __init__.py  model_trainer.py  options.py  tasks.py
fl_server_ai/trainer/events/: __init__.py  base.py  daisy_chain_round_finished.py  model_test_finished.py  swag_round_finished.py  training_round_finished.py
fl_server_ai/uncertainty/: __init__.py  base.py  ensemble.py  mc_dropout.py  method.py  none.py  swag.py
fl_server_api/: __init__.py  apps.py  openapi.py  urls.py  utils.py
fl_server_api/serializers/: generic.py  model.py  training.py  user.py
fl_server_api/tests/: test_dummy.py  test_group.py  test_inference.py  test_model.py  test_openapi.py  test_training.py  test_user.py  test_utils.py  utils.py
fl_server_api/views/: __init__.py  base.py  dummy.py  group.py  inference.py  model.py  training.py  user.py
fl_server_core/: __init__.py  admin.py  apps.py  exceptions.py
fl_server_core/migrations/: 0001_initial.py  0002_remove_globalmodel_swag_first_moment_and_more.py  0003_alter_training_uncertainty_method.py  0004_training_uncertainty_options.py  0005_alter_training_aggregation_method_and_more.py  0006_rename_uncertainty_options_training_options.py  0007_globalmodel_input_shape.py  0008_alter_globalmodel_input_shape.py  0008_globalmodel_preprocessing.py  __init__.py
fl_server_core/models/: __init__.py  metric.py  model.py  training.py  user.py
fl_server_core/tests/: __init__.py  dummy.py  test_metric.py  test_model.py  test_training.py
fl_server_core/utils/: locked_atomic_transaction.py  logging.py  strings.py  torch_pickle.py  torch_serialization.py
helm/all-in-one/: Chart.yaml  values.yaml
helm/celery/: Chart.yaml  values.yaml
helm/celery/templates/: configmap-env.yaml  deployment.yaml  service.yaml
helm/django/: Chart.yaml  values.yaml
helm/django/templates/: NOTES.txt  _helpers.tpl  configmap-env.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/django/templates/tests/: test-connection.yaml
licenses/: license.txt  license_info.csv  license_info.json  license_info.md  license_info.no_versions.csv  license_info.no_versions.json  license_info.no_versions.md
scripts/: utils.sh
